* Stripe: Support verify_credentials [duff]
* AuthorizeNet: Support verify_credentials [duff]
* BraintreeBlue: Support verify_credentials [duff]
* Redsys: Added SAR currency [agseco]
* MaxiPago: add void and refund [shasum]
* MaxiPago: Allow processor_id override [duff]
* Stripe: Interpret string input to store method as token identifier [bizla]
* MaxiPago: Add verify and scrub [shasum]


== Version 1.59.0 (May 18, 2016)
* Orbital: Allow AVS parts to be sent sans country [duff]
* SecureNet: Return the right error message for declines [duff]
* Moneris: Add verify [anellis]
* Moneris: Add verify [anellis]
* Jetpay: Add support for origin field[anellis]
* Jetpay: Don't default origin field [duff]
* GlobalCollect: New gateway support [curiousepic]
* Openpay: Use strict_encode64 [duff]
* Sage: Always pass along the billing state [duff]
* VisaNet Peru: New gateway support [shasum]
* Worldpay: Allow installationId to be specified at transaction time [duff]
* SecurionPay: Support store [shasum]
* Barclaycard Smartpay: Proper AVS return codes [curiousepic]
* VisaNetPeru: Pass through CVV [duff]
* Barclaycard Smartpay: Use strict_encode64 [duff]
* VisaNetPeru: Fix error when billing address empty [shasum]
* Vanco: Update live_url [duff]
* Cardstream: Reference purchase [curiousepic]
* Paymill: Fix error handling [methodmissing]
* Latitude19: New gateway support [shasum]
* BraintreeBlue: remove invalid test assertions [prburke]
* Merchant e-Solutions: Pass order_id with capture [curiousepic]
* CyberSource: Add rescue for ResponseErrors [curiousepic]
* AuthorizeNet: Always pass recurringBilling flag if present [curiousepic]
* S5: Pass order_id to TransactionID [curiousepic]
* NMI: Set ACH sec_code from options if present [curiousepic]
* VisaNet Peru: Refactor merchant_id and purchase_number handling [shasum]
* Braintree Blue: Pass descriptor_url field [curiousepic]
* VisaNet Peru: Add merchant_define_data option [duff]